Salesforce Project/force-app/main/default/objects/Distributor__c/fields/Assigned_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Distributors</relationshipLabel>
    <relationshipName>Distributors</relationshipName>
    <type>Lookup</type>
</CustomField>