Salesforce Project/force-app/main/default/objects/Distributor__c/fields/Delivery_Area__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Area__c</fullName>
    <label>Delivery Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>