Salesforce Project/force-app/main/default/objects/Distributor__c/fields/Distributor_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_ID__c</fullName>
    <displayFormat>D-{0000}</displayFormat>
    <label>Distributor ID</label>
    <type>AutoNumber</type>
</CustomField>